tests/test_files_pa3/errors/ContBreakOutsideWhile.ic
class A
{
	static void main(string[] args) { }
	void a(int b)
	{
		if (b < 5)
		{
			while (b > 0)
			{
				break;
			}
			continue;
		}
	}
}